adicionando commit esquecidos: fortalece o processo de execucao da StavIA, ampliei o sistema ontológico, fixed alguns bugs de respostas na StavIA e reforcei o sistema PWA de syncing. Próximas tasks se baseiam em fortalecimento dessas tasks já feitas e validar seus funcionamentos.